# CMakeezer

./: .gitmodules  README.md
libs/: CMakeezer.py
libs/YourProjectStartHere/: CMakeLists.txt  catch_ut.cpp  fakeit_gtest_ut.cc  sample.cpp
libs/YourProjectStartHere/src/: Cpr.cpp  Dynamix.cpp  HippoMock.cpp  Lambda.cpp  Metal.cpp  RedisCpp.cpp  Tacopie.cpp  TinyDnn.cpp  backward.cpp  brigand.cpp  googlebenchmark_ut.cpp  zmq.cpp
